--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,6 @@ h1,
 
 .red {
     border-top: 4px solid hsl(0, 78%, 62%);
-    background-color: red;
 }
 
 .yellow {
@@ -124,16 +123,15 @@ h1,
 
 @media screen and (max-width:1040px) {
     .container {
-        width: 26rem;
-        margin: 0 auto;
-        margin: 4rem 2rem 0;
+        padding: 0;
+        margin: 4rem 1rem 0;
     }
     h1 {
-        font-size: 2.1rem;
+        font-size: 1.9rem;
         padding-bottom: 0.4rem;
     }
     .bold {
-        font-size: 2.1rem;
+        font-size: 1.9rem;
     }
     .description {
         font-size: 1.3rem;
@@ -154,5 +152,8 @@ h1,
     }
     .yellow {
         margin-bottom: 2rem !important;
+    }
+    .attribution {
+        margin-bottom: 1rem;
     }
 }
